OpenVPN
Copyright (C) 2002-2005 OpenVPN Solutions LLC <info@openvpn.net>

$Id$

2005.10.xx -- Version 2.1-beta5

* More PKCS#11 additions/changes (Alon Bar-Lev).
* Fixed double fork issue that occurs when --management-hold
  is used.
* Moved TUN/TAP read/write log messages from --verb 8 to 6.
* Warn when multiple clients having the same common name or
  username usurp each other when --duplicate-cn is not used.
* Modified Windows and Linux versions of get_default_gateway
  to return the route with the smallest metric
  if multiple 0.0.0.0/0.0.0.0 entries are present.
* Added ">NEED-OK" alert and "needok" command to management
  interface to provide a general interface for sending
  alerts to the end-user.  Used by the PKCS#11 code
  to send Token Insertion Requests to the user.
* Added actual remote address used to the ">STATE" alert
  in the management interface (Rolf Fokkens).

2005.10.17 -- Version 2.1-beta4

* Fixed bug introduced in 2.1-beta3 where management
  socket bind would fail.
* --capath fix in ssl.c (Zhuang Yuyao).
* Added ".PHONY: plugin" to Makefile.am, reverted
  location of "plugin" directory (thanks to
  Matthias Andree for figuring this out).
	
2005.10.16 -- Version 2.1-beta3

* Added PKCS#11 support (Alon Bar-Lev).
* Enable the use of --ca together with --pkcs12.  If --ca is
  used at the same time as --pkcs12, the CA certificate is loaded
  from the file specified by --ca regardless if the pkcs12 file
  contains a CA cert or not (Mathias Sundman).
* Merged --capath patch (Thomas Noel).
* Merged --multihome patch.
* Added --bind option for TCP client connections (Ewan Bhamrah
  Harley).
* Moved "plugin" directory to "plugins" to deal with strange
  automake problem that ended up being also fixable with
  ".PHONY: plugin" in Makefile.am.

2005.10.13 -- Version 2.1-beta2

* Made --sndbuf and --rcvbuf pushable.

2005.10.01 -- Version 2.1-beta1

* Made LZO setting pushable.
* Renamed sample-keys/tmp-ca.crt to ca.crt.